--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.ms-square:expandableTextView:0.1.4'
+    compile 'me.relex:circleindicator:1.1.5@aar'
     compile 'com.github.todou:multitagview:1.0.0'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
 }
