--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="project.hackerton.day" >
 
     <application
@@ -9,12 +10,24 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="AutoDiary" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".DiaryListActivity" >
+        </activity>
+        <activity
+            android:name=".diaryWriteActivity"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+        <activity android:name=".SplashActivity" >
+        </activity>
+        <activity
+            android:name=".DiaryDetailActivity"
+            android:label="@string/title_activity_diary_detail" >
         </activity>
     </application>
 
